# funsol-task

./: main.py  pyproject.toml
