[project]
name = "funsol-task"
version = "0.1.0"
description = "Assesment"
authors = [
    {name = "smazharzaidi",email = "abbasmazhar500@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp (>=3.12.13,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
